Avoid long attribute values to break the status page layout.

--- a/www/resources/default.css
+++ b/www/resources/default.css
@@ -320,6 +320,12 @@ table.attributes tr td {
 	
 	vertical-align: top;
 }
+
+.attrvalue {
+	word-break: break-all;
+	word-wrap: break-word;
+}
+
 table#table_with_attributes tr:last-child td {
 	border-bottom: none;
 }
